# perfect_dark-PSP

./: .gitignore  CMakeLists.txt  README.md  arch.c  psp.sh
.github/workflows/: run.yaml
cmake/: CPUTest.cmake
include/: ultra64.h
include/PR/: abi.h  gu.h  ultratypes.h
port/fast3d/: gfx_gu.cpp  gfx_gu.h  gfx_opengl.cpp  gfx_pc.cpp  gfx_pc.h  gfx_rendering_api.h  gfx_screen_config.h  gfx_sdl2.cpp
port/include/: config.h  input.h  mixer.h  mixer_cmd.h  mixer_me.h  romdata.h  system.h  video.h
port/src/: audio.c  config.c  crash.c  input.c  libultra.c  main.c  mixer.c  mixer_exec.c  mixer_me.c  optionsmenu.c  pdmain.c  romdata.c  system.c  video.c
port/src/preprocess/: filepads.c  misc.c  segaudio.c
src/game/: acosfasinf.c  atan2f.c  bg.c  bondbike.c  bondeyespy.c  bondgrab.c  bondgun.c  bondmove.c  bondview.c  bondwalk.c  camdraw.c  camera.c  chr.c  chraction.c  collisionutils.c  dlights.c  explosions.c  game_096700.c  game_13c510.c  game_1531a0.c  gunfx.c  hudmsg.c  invitems.c  lv.c  menu.c  menugfx.c  menuitem.c  mtxf2lbulkasm_c.c  nbomb.c  pad.c  padhalllv.c  player.c  prop.c  propobj.c  propsnd.c  quaternion.c  radar.c  setup.c  setupcover.c  setuppads.c  (+10 more)
src/game/mplayer/: mplayer.c  setup.c
src/include/: constants.h  data.h  platform.h  types.h  unaligned.h
src/lib/: audiomgr.c  collision.c  dma.c  memp.c  model.c  modelasm_c.c  mp3.c  mtx.c  mtx_c.c  rzip_c.c
src/lib/mp3/: util_c.c
src/lib/naudio/: n_abi.h  n_auxbus.c  n_resample2.c
src/lib/ultra/gu/: align.c  lookat.c  lookatref.c  mtxutil.c  normalize.c  scale.c  translate.c
